--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        service: [restaurant, order, gateway, payment, delivery, query]
+        service: [restaurant, order, gateway, payment, delivery, query, saga]
     defaults:
       run:
         working-directory: ${{ matrix.service }}
@@ -186,6 +186,7 @@ jobs:
             k8s/order-service-deployment.yaml
             k8s/payment-service-deployment.yaml
             k8s/query-service-deployment.yaml
+            k8s/saga-service-deployment.yaml
             k8s/gateway-deployment.yaml
             k8s/frontend-deployment.yaml
           images: |
@@ -194,5 +195,6 @@ jobs:
             ghcr.io/bartlomiejrasztabiga/thesis/order:${{ env.VERSION }}
             ghcr.io/bartlomiejrasztabiga/thesis/payment:${{ env.VERSION }}
             ghcr.io/bartlomiejrasztabiga/thesis/query:${{ env.VERSION }}
+            ghcr.io/bartlomiejrasztabiga/thesis/saga:${{ env.VERSION }}
             ghcr.io/bartlomiejrasztabiga/thesis/gateway:${{ env.VERSION }}
             ghcr.io/bartlomiejrasztabiga/thesis/frontend:${{ env.VERSION }}
