--- a/.gitignore
+++ b/.gitignore
@@ -148,3 +148,4 @@ Temporary Items
 *.icloud
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,intellij
+application-gmaps.properties
