--- a/k8s/delivery-service-deployment.yaml
+++ b/k8s/delivery-service-deployment.yaml
@@ -16,6 +16,13 @@ spec:
         - env:
             - name: AXON_AXONSERVER_SERVERS
               value: axonserver
+            - name: SPRING_ACTIVE_PROFILES
+              value: gmaps
+            - name: GMAPS_API_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: gmaps-api-key
+                  key: key
           image: ghcr.io/bartlomiejrasztabiga/thesis/delivery:latest
           name: delivery-service
           ports:
