--- a/k8s/query-service-deployment.yaml
+++ b/k8s/query-service-deployment.yaml
@@ -18,6 +18,13 @@ spec:
               value: axonserver
             - name: SPRING_DATA_MONGODB_URI
               value: "mongodb://root:password@query-db:27017/query?authSource=admin"
+            - name: SPRING_ACTIVE_PROFILES
+              value: gmaps
+            - name: GMAPS_API_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: gmaps-api-key
+                  key: key
           image: ghcr.io/bartlomiejrasztabiga/thesis/query:latest
           name: query-service
           ports:
