--- a/k8s/frontend-deployment.yaml
+++ b/k8s/frontend-deployment.yaml
@@ -24,7 +24,7 @@ spec:
               value: "3gSK8og83MMTCUlNrzGNfnzpBNyLlpTS"
             - name: AUTH_CLIENT_SECRET
               value: "fxntskIoYgCCXgxT-DYzTZraK4OwX-mwAcv8C4kZdszLDedqdtuwgTK8xB840C2G"
-          image: ghcr.io/bartlomiejrasztabiga/thesis/frontend
+          image: ghcr.io/bartlomiejrasztabiga/thesis/frontend:latest
           name: frontend
           ports:
             - containerPort: 8080
