--- a/k8s/order-service-deployment.yaml
+++ b/k8s/order-service-deployment.yaml
@@ -16,7 +16,7 @@ spec:
         - env:
             - name: AXON_AXONSERVER_SERVERS
               value: axonserver
-          image: ghcr.io/bartlomiejrasztabiga/thesis/order:0.7.2
+          image: ghcr.io/bartlomiejrasztabiga/thesis/order:latest
           name: order-service
           ports:
             - containerPort: 8102
