feat(frontend): WIP gmaps integration

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,8 +32,10 @@
     "@remix-run/react": "^1.19.3",
     "@remix-run/serve": "^1.19.3",
     "@remix-run/server-runtime": "^1.19.3",
+    "@types/google-map-react": "^2.1.7",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
+    "google-map-react": "^2.2.1",
     "isbot": "^3.6.13",
     "marked": "^7.0.4",
     "react": "^18.2.0",
