--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -3,3 +3,4 @@ AUTH_CALLBACK_URL="http://localhost:3000/auth/auth0/callback"
 AUTH_CLIENT_ID="123"
 AUTH_CLIENT_SECRET="123"
 API_GATEWAY_URL="http://localhost:3000"
+GMAPS_API_KEY="123"
