--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,15 +32,16 @@
     "@remix-run/react": "^1.19.3",
     "@remix-run/serve": "^1.19.3",
     "@remix-run/server-runtime": "^1.19.3",
-    "@types/google-map-react": "^2.1.7",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
-    "google-map-react": "^2.2.1",
     "isbot": "^3.6.13",
+    "leaflet": "^1.9.4",
     "marked": "^7.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "remix-auth-auth0": "^1.7.0",
+    "remix-utils": "^6.6.0",
     "tiny-invariant": "^1.3.1"
   },
   "devDependencies": {
@@ -54,6 +55,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/bcryptjs": "^2.4.2",
     "@types/eslint": "^8.44.2",
+    "@types/leaflet": "^1.9.3",
     "@types/marked": "^5.0.1",
     "@types/node": "^20.5.6",
     "@types/react": "^18.2.21",
