feat(payment): user/restaurant/courier invoice sent

--- a/.gitignore
+++ b/.gitignore
@@ -149,4 +149,6 @@ Temporary Items
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,intellij
 application-gmaps.properties
+application-mailjet.properties
 k8s/gmaps-api-key-secret.yaml
+k8s/mailjet-api-key-secret.yaml
