--- a/tests/performance/requirements.txt
+++ b/tests/performance/requirements.txt
@@ -1,13 +1,21 @@
+aiohttp==3.8.5
+aiosignal==1.3.1
+async-timeout==4.0.3
+attrs==23.1.0
+auth0-python==4.4.2
 blinker==1.6.2
 Brotli==1.0.9
 certifi==2023.7.22
+cffi==1.15.1
 charset-normalizer==3.2.0
 click==8.1.7
 ConfigArgParse==1.7
+cryptography==41.0.3
 Faker==19.3.1
 Flask==2.3.3
 Flask-BasicAuth==0.2.0
 Flask-Cors==4.0.0
+frozenlist==1.4.0
 gevent==23.7.0
 geventhttpclient==2.0.9
 greenlet==2.0.2
@@ -18,7 +26,11 @@ Jinja2==3.1.2
 locust==2.16.1
 MarkupSafe==2.1.3
 msgpack==1.0.5
+multidict==6.0.4
 psutil==5.9.5
+pycparser==2.21
+PyJWT==2.8.0
+pyOpenSSL==23.2.0
 python-dateutil==2.8.2
 pyzmq==25.1.1
 requests==2.31.0
@@ -27,6 +39,7 @@ six==1.16.0
 typing_extensions==4.7.1
 urllib3==1.26.16
 Werkzeug==2.3.7
+yarl==1.9.2
 zipp==3.16.2
 zope.event==5.0
 zope.interface==6.0
