feat(performance): WIP Performance tests

--- a/.gitignore
+++ b/.gitignore
@@ -150,5 +150,5 @@ Temporary Items
 # End of https://www.toptal.com/developers/gitignore/api/macos,intellij
 application-gmaps.properties
 application-mailjet.properties
-k8s/gmaps-api-key-secret.yaml
-k8s/mailjet-api-key-secret.yaml
+gmaps-api-key-secret.yaml
+mailjet-api-key-secret.yaml
