--- a/k8s/performance/order-service-deployment.yaml
+++ b/k8s/performance/order-service-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: order-service
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: order-service
@@ -16,7 +16,9 @@ spec:
         - env:
             - name: AXON_AXONSERVER_SERVERS
               value: axonserver
-          image: ghcr.io/bartlomiejrasztabiga/thesis/order:latest
+            - name: SPRING_PROFILES_ACTIVE
+              value: nosecurity
+          image: ghcr.io/bartlomiejrasztabiga/thesis/order:0.15.3
           name: order-service
           ports:
             - containerPort: 8102
