--- a/k8s/performance/payment-service-deployment.yaml
+++ b/k8s/performance/payment-service-deployment.yaml
@@ -1,35 +1,37 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: restaurant-service
+  name: payment-service
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
-      app: restaurant-service
+      app: payment-service
   template:
     metadata:
       labels:
-        app: restaurant-service
+        app: payment-service
     spec:
       containers:
         - env:
             - name: AXON_AXONSERVER_SERVERS
               value: axonserver
-          image: ghcr.io/bartlomiejrasztabiga/thesis/restaurant:latest
-          name: restaurant-service
+            - name: SPRING_PROFILES_ACTIVE
+              value: nosecurity
+          image: ghcr.io/bartlomiejrasztabiga/thesis/payment:0.15.3
+          name: payment-service
           ports:
-            - containerPort: 8101
+            - containerPort: 8103
           livenessProbe:
             httpGet:
               path: /actuator/health/liveness
-              port: 8101
+              port: 8103
             initialDelaySeconds: 30
             periodSeconds: 10
           readinessProbe:
             httpGet:
               path: /actuator/health/readiness
-              port: 8101
+              port: 8103
             initialDelaySeconds: 30
             periodSeconds: 10
       restartPolicy: Always
