--- a/k8s/main/payment-service-deployment.yaml
+++ b/k8s/main/payment-service-deployment.yaml
@@ -17,7 +17,7 @@ spec:
             - name: AXON_AXONSERVER_SERVERS
               value: axonserver
             - name: SPRING_PROFILES_ACTIVE
-              value: mailjet
+              value: mailjet,stripe
             - name: MAILJET_API_KEY_PUBLIC
               valueFrom:
                 secretKeyRef:
@@ -28,6 +28,21 @@ spec:
                 secretKeyRef:
                   name: mailjet-api-key
                   key: private
+            - name: STRIPE_API_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: stripe-api-key
+                  key: key
+            - name: STRIPE_ENDPOINT_SECRET
+              valueFrom:
+                secretKeyRef:
+                  name: stripe-api-key
+                  key: endpoint-secret
+            - name: STRIPE_FRONTEND_DOMAIN
+              valueFrom:
+                secretKeyRef:
+                  name: stripe-api-key
+                  key: frontend-domain
           image: ghcr.io/bartlomiejrasztabiga/thesis/payment:latest
           name: payment-service
           ports:
