--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,12 +14,8 @@
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "remix-serve build",
     "start:mocks": "binode --require ./mocks -- @remix-run/serve:remix-serve build",
-    "test": "vitest",
-    "test:e2e:dev": "start-server-and-test dev http://localhost:3000 \"npx cypress open\"",
-    "pretest:e2e:run": "npm run build",
-    "test:e2e:run": "cross-env PORT=8811 start-server-and-test start:mocks http://localhost:8811 \"npx cypress run\"",
     "typecheck": "tsc && tsc -p cypress",
-    "validate": "run-p \"test -- --run\" lint typecheck test:e2e:run"
+    "validate": "run-p lint typecheck"
   },
   "prettier": {},
   "eslintIgnore": [
@@ -32,11 +28,11 @@
     "@remix-run/react": "^2.0.1",
     "@remix-run/serve": "^2.0.1",
     "@remix-run/server-runtime": "^2.0.1",
-    "axios": "^1.4.0",
+    "axios": "^1.5.1",
     "bcryptjs": "^2.4.3",
-    "isbot": "^3.6.13",
+    "isbot": "^3.7.0",
     "leaflet": "^1.9.4",
-    "marked": "^7.0.4",
+    "marked": "^9.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
@@ -45,47 +41,39 @@
     "tiny-invariant": "^1.3.1"
   },
   "devDependencies": {
-    "@faker-js/faker": "^8.0.2",
+    "@faker-js/faker": "^8.1.0",
     "@remix-run/dev": "^2.0.1",
     "@remix-run/eslint-config": "^2.0.1",
-    "@testing-library/cypress": "^9.0.0",
-    "@testing-library/dom": "^9.3.1",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/bcryptjs": "^2.4.2",
-    "@types/eslint": "^8.44.2",
-    "@types/leaflet": "^1.9.3",
-    "@types/marked": "^5.0.1",
-    "@types/node": "^20.5.6",
-    "@types/react": "^18.2.21",
-    "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react": "^4.0.4",
-    "@vitest/coverage-v8": "^0.34.3",
-    "autoprefixer": "^10.4.15",
+    "@types/bcryptjs": "^2.4.4",
+    "@types/eslint": "^8.44.3",
+    "@types/leaflet": "^1.9.6",
+    "@types/marked": "^5.0.2",
+    "@types/node": "^20.8.4",
+    "@types/react": "^18.2.27",
+    "@types/react-dom": "^18.2.12",
+    "@vitejs/plugin-react": "^4.1.0",
+    "autoprefixer": "^10.4.16",
     "binode": "^1.0.5",
     "c8": "^8.0.1",
     "cookie": "^0.5.0",
     "cross-env": "^7.0.3",
-    "cypress": "^12.17.4",
-    "daisyui": "^3.6.3",
-    "eslint": "^8.48.0",
+    "cypress": "^13.3.0",
+    "daisyui": "^3.9.2",
+    "eslint": "^8.51.0",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-cypress": "^2.14.0",
-    "happy-dom": "^10.11.0",
-    "msw": "^1.2.4",
+    "eslint-plugin-cypress": "^2.15.1",
+    "happy-dom": "^12.9.1",
+    "msw": "^1.3.2",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.28",
-    "prettier": "3.0.2",
-    "prettier-plugin-tailwindcss": "^0.5.3",
-    "start-server-and-test": "^2.0.0",
+    "postcss": "^8.4.31",
+    "prettier": "3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.5",
     "tailwindcss": "^3.3.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.2.2",
-    "vite": "^4.4.9",
-    "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^0.34.3"
+    "vite": "^4.4.11",
+    "vite-tsconfig-paths": "^4.2.1"
   },
   "engines": {
     "node": ">=14"
