--- a/k8s/performance/axonserver-events-persistentvolumeclaim.yaml
+++ b/k8s/performance/axonserver-events-persistentvolumeclaim.yaml
@@ -3,8 +3,9 @@ kind: PersistentVolumeClaim
 metadata:
   name: axonserver-events
 spec:
+  storageClassName: mayastor-3
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 100Mi
+      storage: 500Mi
