--- a/k8s/main/axonserver-statefulset.yaml
+++ b/k8s/main/axonserver-statefulset.yaml
@@ -45,6 +45,10 @@ spec:
               port: 8024
             initialDelaySeconds: 60
             periodSeconds: 60
+          resources:
+            requests:
+              memory: "500Mi"
+              cpu: "250m"
       restartPolicy: Always
       volumes:
         - name: axonserver-data
