--- a/k8s/main/delivery-service-deployment.yaml
+++ b/k8s/main/delivery-service-deployment.yaml
@@ -39,4 +39,8 @@ spec:
               port: 8104
             initialDelaySeconds: 30
             periodSeconds: 10
+          resources:
+            requests:
+              memory: "500Mi"
+              cpu: "250m"
       restartPolicy: Always
