--- a/k8s/main/frontend-deployment.yaml
+++ b/k8s/main/frontend-deployment.yaml
@@ -40,4 +40,8 @@ spec:
               port: 8080
             initialDelaySeconds: 30
             periodSeconds: 10
+          resources:
+            requests:
+              memory: "500Mi"
+              cpu: "250m"
       restartPolicy: Always
