--- a/k8s/main/order-service-deployment.yaml
+++ b/k8s/main/order-service-deployment.yaml
@@ -32,4 +32,8 @@ spec:
               port: 8102
             initialDelaySeconds: 30
             periodSeconds: 10
+          resources:
+            requests:
+              memory: "500Mi"
+              cpu: "250m"
       restartPolicy: Always
