--- a/k8s/main/payment-service-deployment.yaml
+++ b/k8s/main/payment-service-deployment.yaml
@@ -59,4 +59,8 @@ spec:
               port: 8103
             initialDelaySeconds: 30
             periodSeconds: 10
+          resources:
+            requests:
+              memory: "500Mi"
+              cpu: "250m"
       restartPolicy: Always
