--- a/k8s/main/query-service-deployment.yaml
+++ b/k8s/main/query-service-deployment.yaml
@@ -41,4 +41,8 @@ spec:
               port: 8105
             initialDelaySeconds: 30
             periodSeconds: 10
+          resources:
+            requests:
+              memory: "500Mi"
+              cpu: "250m"
       restartPolicy: Always
