--- a/k8s/main/saga-db-statefulset.yaml
+++ b/k8s/main/saga-db-statefulset.yaml
@@ -28,6 +28,10 @@ spec:
               value: password
             - name: MONGO_INITDB_DATABASE
               value: saga
+          resources:
+            requests:
+              memory: "500Mi"
+              cpu: "250m"
       restartPolicy: Always
       volumes:
         - name: saga-db-data
