--- a/k8s/main/saga-service-deployment.yaml
+++ b/k8s/main/saga-service-deployment.yaml
@@ -34,4 +34,8 @@ spec:
               port: 8106
             initialDelaySeconds: 30
             periodSeconds: 10
+          resources:
+            requests:
+              memory: "500Mi"
+              cpu: "250m"
       restartPolicy: Always
