--- a/k8s/performance/gateway-deployment.yaml
+++ b/k8s/performance/gateway-deployment.yaml
@@ -24,7 +24,7 @@ spec:
               value: http://delivery-service:8104
             - name: URI_QUERY
               value: http://query-service:8105
-          image: ghcr.io/bartlomiejrasztabiga/thesis/gateway:0.16.11
+          image: ghcr.io/bartlomiejrasztabiga/thesis/gateway:0.16.12
           name: gateway
           ports:
             - containerPort: 8100
@@ -40,4 +40,8 @@ spec:
               port: 8100
             initialDelaySeconds: 30
             periodSeconds: 10
+          resources:
+            requests:
+              memory: "500Mi"
+              cpu: "250m"
       restartPolicy: Always
