--- a/k8s/performance/query-service-deployment.yaml
+++ b/k8s/performance/query-service-deployment.yaml
@@ -20,7 +20,7 @@ spec:
               value: "mongodb://root:password@query-db:27017/query?authSource=admin"
             - name: SPRING_PROFILES_ACTIVE
               value: nosecurity
-          image: ghcr.io/bartlomiejrasztabiga/thesis/query:0.16.11
+          image: ghcr.io/bartlomiejrasztabiga/thesis/query:0.16.12
           name: query-service
           ports:
             - containerPort: 8105
@@ -36,4 +36,8 @@ spec:
               port: 8105
             initialDelaySeconds: 30
             periodSeconds: 10
+          resources:
+            requests:
+              memory: "500Mi"
+              cpu: "250m"
       restartPolicy: Always
