--- a/k8s/performance/saga-service-deployment.yaml
+++ b/k8s/performance/saga-service-deployment.yaml
@@ -20,7 +20,7 @@ spec:
               value: "mongodb://root:password@saga-db:27017/saga?authSource=admin"
             - name: SPRING_PROFILES_ACTIVE
               value: nosecurity
-          image: ghcr.io/bartlomiejrasztabiga/thesis/saga:0.16.11
+          image: ghcr.io/bartlomiejrasztabiga/thesis/saga:0.16.12
           name: saga-service
           ports:
             - containerPort: 8106
@@ -36,4 +36,8 @@ spec:
               port: 8106
             initialDelaySeconds: 30
             periodSeconds: 10
+          resources:
+            requests:
+              memory: "500Mi"
+              cpu: "250m"
       restartPolicy: Always
