feat(frontend): WIP Courier live location

--- a/k8s/main/axonserver-data-persistentvolumeclaim.yaml
+++ b/k8s/main/axonserver-data-persistentvolumeclaim.yaml
@@ -3,6 +3,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: axonserver-data
 spec:
+  storageClassName: mayastor-3
   accessModes:
     - ReadWriteOnce
   resources:
