--- a/k8s/main/query-db-persistentvolumeclaim.yaml
+++ b/k8s/main/query-db-persistentvolumeclaim.yaml
@@ -3,6 +3,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: query-db-data
 spec:
+  storageClassName: mayastor-3
   accessModes:
     - ReadWriteOnce
   resources:
