--- a/k8s/main/axonserver-config-persistentvolumeclaim.yaml
+++ b/k8s/main/axonserver-config-persistentvolumeclaim.yaml
@@ -3,6 +3,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: axonserver-config
 spec:
+  storageClassName: mayastor-3
   accessModes:
     - ReadWriteOnce
   resources:
