--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "blog-tutorial-49be",
+  "name": "thesis",
   "private": true,
   "sideEffects": false,
+  "type": "module",
   "scripts": {
     "build": "remix build",
     "dev": "remix dev --manual",
@@ -37,6 +38,7 @@
     "react-toastify": "^9.1.3",
     "remix-auth": "^3.6.0",
     "remix-auth-auth0": "^1.8.2",
+    "remix-utils": "^7.1.0",
     "tiny-invariant": "^1.3.1"
   },
   "devDependencies": {
@@ -75,6 +77,6 @@
     "vite-tsconfig-paths": "^4.2.1"
   },
   "engines": {
-    "node": ">=14"
+    "node": ">=18.0.0"
   }
 }
