--- a/k8s/performance/delivery-service-deployment.yaml
+++ b/k8s/performance/delivery-service-deployment.yaml
@@ -18,7 +18,7 @@ spec:
               value: axonserver
             - name: SPRING_PROFILES_ACTIVE
               value: nosecurity
-          image: ghcr.io/bartlomiejrasztabiga/thesis/delivery:0.17.1
+          image: ghcr.io/bartlomiejrasztabiga/thesis/delivery:latest
           name: delivery-service
           ports:
             - containerPort: 8104
