--- a/k8s/performance/order-service-deployment.yaml
+++ b/k8s/performance/order-service-deployment.yaml
@@ -18,7 +18,7 @@ spec:
               value: axonserver
             - name: SPRING_PROFILES_ACTIVE
               value: nosecurity
-          image: ghcr.io/bartlomiejrasztabiga/thesis/order:0.17.1
+          image: ghcr.io/bartlomiejrasztabiga/thesis/order:latest
           name: order-service
           ports:
             - containerPort: 8102
