--- a/k8s/performance/payment-service-deployment.yaml
+++ b/k8s/performance/payment-service-deployment.yaml
@@ -18,7 +18,7 @@ spec:
               value: axonserver
             - name: SPRING_PROFILES_ACTIVE
               value: nosecurity
-          image: ghcr.io/bartlomiejrasztabiga/thesis/payment:0.17.1
+          image: ghcr.io/bartlomiejrasztabiga/thesis/payment:latest
           name: payment-service
           ports:
             - containerPort: 8103
