--- a/k8s/performance/query-service-deployment.yaml
+++ b/k8s/performance/query-service-deployment.yaml
@@ -20,7 +20,7 @@ spec:
               value: "mongodb://root:password@query-db:27017/query?authSource=admin"
             - name: SPRING_PROFILES_ACTIVE
               value: nosecurity
-          image: ghcr.io/bartlomiejrasztabiga/thesis/query:0.17.1
+          image: ghcr.io/bartlomiejrasztabiga/thesis/query:latest
           name: query-service
           ports:
             - containerPort: 8105
