--- a/k8s/performance/restaurant-service-deployment.yaml
+++ b/k8s/performance/restaurant-service-deployment.yaml
@@ -18,7 +18,7 @@ spec:
               value: axonserver
             - name: SPRING_PROFILES_ACTIVE
               value: nosecurity
-          image: ghcr.io/bartlomiejrasztabiga/thesis/restaurant:0.17.1
+          image: ghcr.io/bartlomiejrasztabiga/thesis/restaurant:latest
           name: restaurant-service
           ports:
             - containerPort: 8101
