--- a/k8s/performance/saga-service-deployment.yaml
+++ b/k8s/performance/saga-service-deployment.yaml
@@ -20,7 +20,7 @@ spec:
               value: "mongodb://root:password@saga-db:27017/saga?authSource=admin"
             - name: SPRING_PROFILES_ACTIVE
               value: nosecurity
-          image: ghcr.io/bartlomiejrasztabiga/thesis/saga:0.17.1
+          image: ghcr.io/bartlomiejrasztabiga/thesis/saga:latest
           name: saga-service
           ports:
             - containerPort: 8106
