--- a/k8s/main/gateway-deployment.yaml
+++ b/k8s/main/gateway-deployment.yaml
@@ -24,7 +24,7 @@ spec:
               value: http://delivery-service:8104
             - name: URI_QUERY
               value: http://query-service:8105
-          image: ghcr.io/bartlomiejrasztabiga/thesis/gateway:latest
+          image: ghcr.io/bartlomiejrasztabiga/thesis/gateway:0.17.16
           name: gateway
           ports:
             - containerPort: 8100
