--- a/k8s/main/payment-service-deployment.yaml
+++ b/k8s/main/payment-service-deployment.yaml
@@ -43,7 +43,7 @@ spec:
                 secretKeyRef:
                   name: stripe-api-key
                   key: frontend-domain
-          image: ghcr.io/bartlomiejrasztabiga/thesis/payment:latest
+          image: ghcr.io/bartlomiejrasztabiga/thesis/payment:0.17.16
           name: payment-service
           ports:
             - containerPort: 8103
