--- a/k8s/main/query-service-deployment.yaml
+++ b/k8s/main/query-service-deployment.yaml
@@ -25,7 +25,7 @@ spec:
                 secretKeyRef:
                   name: gmaps-api-key
                   key: key
-          image: ghcr.io/bartlomiejrasztabiga/thesis/query:latest
+          image: ghcr.io/bartlomiejrasztabiga/thesis/query:0.17.16
           name: query-service
           ports:
             - containerPort: 8105
