--- a/k8s/main/saga-service-deployment.yaml
+++ b/k8s/main/saga-service-deployment.yaml
@@ -18,7 +18,7 @@ spec:
               value: axonserver
             - name: SPRING_DATA_MONGODB_URI
               value: "mongodb://root:password@saga-db:27017/saga?authSource=admin"
-          image: ghcr.io/bartlomiejrasztabiga/thesis/saga:latest
+          image: ghcr.io/bartlomiejrasztabiga/thesis/saga:0.17.16
           name: saga-service
           ports:
             - containerPort: 8106
