feat(backend): WIP unit tests

--- a/k8s/main/restaurant-service-deployment.yaml
+++ b/k8s/main/restaurant-service-deployment.yaml
@@ -16,6 +16,13 @@ spec:
         - env:
             - name: AXON_AXONSERVER_SERVERS
               value: axonserver
+            - name: SPRING_PROFILES_ACTIVE
+              value: gmaps
+            - name: GMAPS_API_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: gmaps-api-key
+                  key: key
           image: ghcr.io/bartlomiejrasztabiga/thesis/restaurant:0.17.16
           name: restaurant-service
           ports:
