--- a/k8s/gcp/ingress.yaml
+++ b/k8s/gcp/ingress.yaml
@@ -16,6 +16,13 @@ spec:
                 name: gateway
                 port:
                   number: 8100
+          - path: /api/v1/restaurants
+            pathType: Prefix
+            backend:
+              service:
+                name: restaurant-service
+                port:
+                  number: 8101
           - path: /
             pathType: Prefix
             backend:
