--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -16,14 +16,6 @@ services:
       - '8124:8124'
       - '8224:8224'
 
-  gateway:
-    image: ghcr.io/bartlomiejrasztabiga/thesis/gateway:latest
-    build:
-      context: ../gateway
-      dockerfile: Dockerfile
-    ports:
-      - '8100:8100'
-
   restaurant-service:
     image: ghcr.io/bartlomiejrasztabiga/thesis/restaurant:latest
     build:
@@ -129,6 +121,13 @@ services:
       - MONGO_INITDB_ROOT_USERNAME=root
       - MONGO_INITDB_ROOT_PASSWORD=password
       - MONGO_INITDB_DATABASE=saga
+
+  nginx:
+    image: nginx:1.25.3
+    ports:
+      - '8100:80'
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
 volumes:
   axonserver-data:
   axonserver-events:
