--- a/k8s/main/ingress.yaml
+++ b/k8s/main/ingress.yaml
@@ -3,6 +3,7 @@ kind: Ingress
 metadata:
   name: thesis-ingress
 spec:
+  ingressClassName: nginx
   rules:
     - host: thesis.rasztabiga.me
       http:
