--- a/k8s/main/restaurant-service-deployment.yaml
+++ b/k8s/main/restaurant-service-deployment.yaml
@@ -16,6 +16,8 @@ spec:
         - env:
             - name: AXON_AXONSERVER_SERVERS
               value: axonserver
+            - name: AXONIQ_CONSOLE_CREDENTIALS
+              value: "68447ea9-1:4ac1289d784047ac88cc1e1ab39bdefc"
             - name: SPRING_PROFILES_ACTIVE
               value: gmaps
             - name: GMAPS_API_KEY
