--- a/k8s/main/saga-service-deployment.yaml
+++ b/k8s/main/saga-service-deployment.yaml
@@ -16,6 +16,8 @@ spec:
         - env:
             - name: AXON_AXONSERVER_SERVERS
               value: axonserver
+            - name: AXONIQ_CONSOLE_CREDENTIALS
+              value: "68447ea9-1:4ac1289d784047ac88cc1e1ab39bdefc"
             - name: SPRING_DATA_MONGODB_URI
               value: "mongodb://root:password@saga-db:27017/saga?authSource=admin"
           image: ghcr.io/bartlomiejrasztabiga/thesis/saga:0.18.7
