--- a/order/src/main/resources/application-dev.properties
+++ b/order/src/main/resources/application-dev.properties
@@ -1,7 +1,2 @@
 axon.axonserver.servers=localhost:8124
-
-#axon.axonserver.servers=axonserver.cloud.axoniq.io:443
-#axon.axonserver.keep-alive-time=0
-#axon.axonserver.ssl-enabled=true
-#axon.axonserver.context=order@Thesis
-#axon.axonserver.token=7O8TKf2UIvfY1PMJEePc
+axoniq.console.credentials=68447ea9-0:b8b5aeb75a1a48b89b4a8b10a0be3282
