--- a/restaurant/src/main/resources/application-dev.properties
+++ b/restaurant/src/main/resources/application-dev.properties
@@ -1,7 +1,2 @@
 axon.axonserver.servers=localhost:8124
-
-#axon.axonserver.servers=axonserver.cloud.axoniq.io:443
-#axon.axonserver.keep-alive-time=0
-#axon.axonserver.ssl-enabled=true
-#axon.axonserver.context=restaurant@Thesis
-#axon.axonserver.token=qXOG7KM9mtfPSk1wh0DN
+axoniq.console.credentials=68447ea9-0:b8b5aeb75a1a48b89b4a8b10a0be3282
