--- a/saga/src/main/resources/application-dev.properties
+++ b/saga/src/main/resources/application-dev.properties
@@ -1,3 +1,3 @@
 axon.axonserver.servers=localhost:8124
-
+axoniq.console.credentials=68447ea9-0:b8b5aeb75a1a48b89b4a8b10a0be3282
 spring.data.mongodb.uri=mongodb://root:password@localhost:27106/saga?authSource=admin
