feat(backend): WIP axonserver cluster

--- a/.gitignore
+++ b/.gitignore
@@ -153,3 +153,5 @@ application-mailjet.properties
 gmaps-api-key-secret.yaml
 mailjet-api-key-secret.yaml
 stripe-api-key-secret.yaml
+
+axoniq.license
