--- a/k8s/performance/query-service-deployment.yaml
+++ b/k8s/performance/query-service-deployment.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: order-service
+  name: query-service
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: order-service
+      app: query-service
   template:
     metadata:
       labels:
-        app: order-service
+        app: query-service
     spec:
       containers:
         - env:
@@ -18,20 +18,24 @@ spec:
               value: axonserver
             - name: AXONIQ_CONSOLE_CREDENTIALS
               value: "68447ea9-1:4ac1289d784047ac88cc1e1ab39bdefc"
-          image: ghcr.io/bartlomiejrasztabiga/thesis/order:0.19.0
-          name: order-service
+            - name: SPRING_DATA_MONGODB_URI
+              value: "mongodb://root:password@query-db:27017/query?authSource=admin"
+            - name: SPRING_PROFILES_ACTIVE
+              value: nosecurity
+          image: ghcr.io/bartlomiejrasztabiga/thesis/query:0.19.0
+          name: query-service
           ports:
-            - containerPort: 8102
+            - containerPort: 8105
           livenessProbe:
             httpGet:
               path: /actuator/health/liveness
-              port: 8102
+              port: 8105
             initialDelaySeconds: 30
             periodSeconds: 10
           readinessProbe:
             httpGet:
               path: /actuator/health/readiness
-              port: 8102
+              port: 8105
             initialDelaySeconds: 30
             periodSeconds: 10
           resources:
