--- a/k8s/performance/query-service-deployment.yaml
+++ b/k8s/performance/query-service-deployment.yaml
@@ -19,11 +19,11 @@ spec:
             - name: AXONIQ_CONSOLE_CREDENTIALS
               value: "68447ea9-1:4ac1289d784047ac88cc1e1ab39bdefc"
             - name: SPRING_DATA_MONGODB_URI
-#              value: "mongodb+srv://thesis:thesis@prod.xop3q7m.mongodb.net/query?retryWrites=true&w=majority"
-              value: "mongodb://root:password@query-db:27017/query?authSource=admin"
+              value: "mongodb+srv://thesis:thesis@prod.xop3q7m.mongodb.net/query?retryWrites=true&w=majority"
+#              value: "mongodb://root:password@query-db:27017/query?authSource=admin"
             - name: SPRING_PROFILES_ACTIVE
               value: nosecurity
-          image: ghcr.io/bartlomiejrasztabiga/thesis/query:0.19.8
+          image: ghcr.io/bartlomiejrasztabiga/thesis/query:0.19.9
           name: query-service
           ports:
             - containerPort: 8105
