--- a/query/src/main/resources/application.properties
+++ b/query/src/main/resources/application.properties
@@ -9,3 +9,5 @@ management.health.livenessState.enabled=true
 management.health.readinessState.enabled=true
 
 axon.axonserver.client-id=query-service
+
+spring.data.mongodb.auto-index-creation=true
