feat(backend): WIP sentry integration

--- a/query/src/main/resources/application.properties
+++ b/query/src/main/resources/application.properties
@@ -11,3 +11,6 @@ management.health.readinessState.enabled=true
 axon.axonserver.client-id=query-service
 
 spring.data.mongodb.auto-index-creation=true
+
+sentry.dsn=https://b650a86649d0d72abfc2e87d8fab32ad@o4504983955177472.ingest.sentry.io/4506191171682304
+sentry.traces-sample-rate=1.0
