--- a/saga/src/main/resources/application.properties
+++ b/saga/src/main/resources/application.properties
@@ -9,3 +9,6 @@ management.health.livenessState.enabled=true
 management.health.readinessState.enabled=true
 
 axon.axonserver.client-id=saga-service
+
+sentry.dsn=https://b650a86649d0d72abfc2e87d8fab32ad@o4504983955177472.ingest.sentry.io/4506191171682304
+sentry.traces-sample-rate=1.0
