--- a/delivery/src/main/resources/application.properties
+++ b/delivery/src/main/resources/application.properties
@@ -13,3 +13,4 @@ axon.axonserver.client-id=delivery-service
 sentry.dsn=https://b650a86649d0d72abfc2e87d8fab32ad@o4504983955177472.ingest.sentry.io/4506191171682304
 sentry.traces-sample-rate=1.0
 sentry.exception-resolver-order=-2147483647
+sentry.debug=true
