--- a/saga/src/main/resources/application.properties
+++ b/saga/src/main/resources/application.properties
@@ -12,5 +12,6 @@ axon.axonserver.client-id=saga-service
 
 sentry.dsn=https://e92ffcbdd545a9d3e331d903f182d690@o4504983955177472.ingest.sentry.io/4506195047219200
 sentry.traces-sample-rate=0.0
+sentry.enable-tracing=false
 sentry.exception-resolver-order=-2147483647
 sentry.debug=true
