--- a/delivery/src/main/resources/application.properties
+++ b/delivery/src/main/resources/application.properties
@@ -12,5 +12,6 @@ axon.axonserver.client-id=delivery-service
 
 sentry.dsn=https://73c24ec566f799317f5f835d69b86458@o4504983955177472.ingest.sentry.io/4506195043418112
 sentry.traces-sample-rate=0.0
+sentry.enable-tracing=false
 sentry.exception-resolver-order=-2147483647
 sentry.debug=true
