--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -12,5 +12,6 @@ axon.axonserver.client-id=order-service
 
 sentry.dsn=https://167eb3b947ac72426595bdafead68683@o4504983955177472.ingest.sentry.io/4506195044532224
 sentry.traces-sample-rate=0.0
+sentry.enable-tracing=false
 sentry.exception-resolver-order=-2147483647
 sentry.debug=true
