--- a/restaurant/src/main/resources/application.properties
+++ b/restaurant/src/main/resources/application.properties
@@ -12,5 +12,6 @@ axon.axonserver.client-id=restaurant-service
 
 sentry.dsn=https://b7e52ea33079923419d7b85ae009ae5c@o4504983955177472.ingest.sentry.io/4506195046039552
 sentry.traces-sample-rate=0.0
+sentry.enable-tracing=false
 sentry.exception-resolver-order=-2147483647
 sentry.debug=true
