feat(backend): WIP fix performance issues

--- a/delivery/src/main/resources/application.properties
+++ b/delivery/src/main/resources/application.properties
@@ -14,4 +14,4 @@ sentry.dsn=https://73c24ec566f799317f5f835d69b86458@o4504983955177472.ingest.sen
 sentry.traces-sample-rate=0.0
 sentry.enable-tracing=false
 sentry.exception-resolver-order=-2147483647
-sentry.debug=true
+sentry.debug=false
