--- a/restaurant/src/main/resources/application.properties
+++ b/restaurant/src/main/resources/application.properties
@@ -14,4 +14,4 @@ sentry.dsn=https://b7e52ea33079923419d7b85ae009ae5c@o4504983955177472.ingest.sen
 sentry.traces-sample-rate=0.0
 sentry.enable-tracing=false
 sentry.exception-resolver-order=-2147483647
-sentry.debug=true
+sentry.debug=false
