--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -14,4 +14,4 @@ sentry.dsn=https://167eb3b947ac72426595bdafead68683@o4504983955177472.ingest.sen
 sentry.traces-sample-rate=0.0
 sentry.enable-tracing=false
 sentry.exception-resolver-order=-2147483647
-sentry.debug=true
+sentry.debug=false
