--- a/payment/src/main/resources/application.properties
+++ b/payment/src/main/resources/application.properties
@@ -14,4 +14,4 @@ sentry.dsn=https://a845c6823a5c6fd3eb83c0a43d519387@o4504983955177472.ingest.sen
 sentry.traces-sample-rate=0.0
 sentry.enable-tracing=false
 sentry.exception-resolver-order=-2147483647
-sentry.debug=true
+sentry.debug=false
