--- a/query/src/main/resources/application.properties
+++ b/query/src/main/resources/application.properties
@@ -16,4 +16,4 @@ sentry.dsn=https://0484d100bf45546e513da5dec36ac1a1@o4504983955177472.ingest.sen
 sentry.traces-sample-rate=0.0
 sentry.enable-tracing=false
 sentry.exception-resolver-order=-2147483647
-sentry.debug=true
+sentry.debug=false
