--- a/saga/src/main/resources/application.properties
+++ b/saga/src/main/resources/application.properties
@@ -14,4 +14,4 @@ sentry.dsn=https://e92ffcbdd545a9d3e331d903f182d690@o4504983955177472.ingest.sen
 sentry.traces-sample-rate=0.0
 sentry.enable-tracing=false
 sentry.exception-resolver-order=-2147483647
-sentry.debug=true
+sentry.debug=false
