ci: Update update-gradle-wrapper.yml

--- a/.github/workflows/update-gradle-wrapper.yml
+++ b/.github/workflows/update-gradle-wrapper.yml
@@ -24,8 +24,10 @@ jobs:
         with:
           paths: |
             delivery/**
-            gateway/**
+            e2e/**
             order/**
             payment/**
+            query/**
             restaurant/**
+            saga/**
             shared/**
